manifests/ui.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ui
  namespace: ui
spec:
  containers:
  - name: ui
    image: public.ecr.aws/aws-containers/retail-store-sample-ui:0.8.3
    ports:
    - containerPort: 80
